Render HTML and Markdown

--- a/src/templates/post_detail.html
+++ b/src/templates/post_detail.html
@@ -43,7 +43,7 @@ Linkedin
 <div class='row'>
 <div class='col-sm-12'>
 
-{{ instance.content|linebreaks }}
+<div class = 'content-markdown'>{{ instance.content}}</div>
 
 <hr/>
 <br/>
