--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -32,10 +32,24 @@ fjs.parentNode.insertBefore(js, fjs);
 {% block content %}{% endblock content %}
 </div>
 
-
+<script   src="https://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+<script src ='https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.min.js'> </script>
+
+<script type="text/javascript">
+$(document).ready(function(){
+   $(".content-markdown").each(function(){
+            var content = $(this).text()
+            var markedContent = marked(content)
+            $(this).html(markedContent)
+    })
+  })
+</script>
+
+
 </body>
 </html>
 
