--- a/src/templates/post_form.html
+++ b/src/templates/post_form.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block head_extra %}
+    {{ form.media }}
+{% endblock head_extra %}
 
 {% block content %}
 <div class='col-sm-6 col-sm-offset-3'>
