5.responsive image 6. rendering markdown with django

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -48,6 +48,9 @@ $(document).ready(function(){
             var markedContent = marked(content)
             $(this).html(markedContent)
     })
+   $(".post-detail-item img").each(function(){
+       $(this).addClass("img-responsive");
+   })
   })
 </script>
 
