--- a/src/templates/post_detail.html
+++ b/src/templates/post_detail.html
@@ -43,11 +43,26 @@ Linkedin
 <div class='row'>
 <div class='col-sm-12'>
 
+
 <div class = 'post-detail-item'>{{ instance.get_markdown}}</div>
 
 <hr/>
 <br/>
-<div class="fb-comments" data-href="{{ request.build_absolute_uri }}" data-numposts="5"></div>
+    <div>
+        <p class='lead'>Comments</p>
+        {%  for comment in comments %}
+        <div class=''>
+              {{ comment.content }}
+            <br/>
+            <small> via {{ comment.user }} on {{ comment.timestamp | timesince }} ago </small>
+        <hr/>
+        </div>
+        {% endfor %}
+
+
+
+    </div>
+{#<div class="fb-comments" data-href="{{ request.build_absolute_uri }}" data-numposts="5"></div>#}
 
 </div>
 </div>
